<resources>
    <string name="app_name">PopularMoviesStageTwo</string>
    <string name="title">Title: </string>
    <string name="Overview">Overview: </string>
    <string name="vote_average">Vote Average: </string>
    <string name="release_date">Release Date: </string>
    <string name="popular">Popular</string>
    <string name="popular_api">popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="favourites">Favourites</string>
    <string name="top_rated_api">top_rated</string>
    <string name="error_msg">Error Finding Data</string>
    <string name="movie_detail_poster">Movie Detail Poster</string>
    <string name="movie_detail">Movie Details</string>
    <string name="trailers">Trailers</string>
    <string name="reviews">Reviews</string>
    <string name="error_msg_reviews">No reviews Found</string>
    <string name="error_msg_trailers">No Trailers Found</string>
</resources>

